# WeSee

./: .gitignore  README.md
WeSee/: ContentView.swift  WeSeeApp.swift
WeSee.xcodeproj/: project.pbxproj
WeSee/Models/: Message.swift  ScheduledTask.swift  Tag.swift
WeSee/Services/: RemoteClient.swift
WeSee/ViewModels/: ChatViewModel.swift  SidebarViewModel.swift
WeSeeTests/: ChatViewModelTests.swift  WeSeeTests.swift
WeSeeUITests/: WeSeeUITests.swift
client/: CLAUDE.md  README.md
client/WeSee/: ContentView.swift  WeSeeApp.swift
client/WeSee.xcodeproj/: project.pbxproj
client/WeSeeTests/: AgentRunnerTests.swift  AgentToolTests.swift  ChatSessionTests.swift  ChatViewModelTests.swift  ConfigLoaderTests.swift  (+5 more)
docs/: tailscale-setup.md
server/: .env.example  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  schemas.py
server/agent/: llm.py  prompt.py  runner.py
server/conversations/: __init__.py  store.py  testing.py
server/handlers/: api.py  websocket.py
server/memory/: __init__.py  config.py  embeddings.py
server/memory/rdbms/: base.py  models.py
server/migrations/: env.py
server/migrations/versions/: 20260625_0001_conversation_persistence.py
server/models/: events.py  message.py
server/routers/: chat.py  conversations.py  messages.py  tags.py  tasks.py
server/services/: deepseek.py
server/session/: manager.py
server/static/: app.js  index.html
server/tests/: conftest.py  test_agent.py  test_api.py  test_chat.py  test_config.py  test_conversations.py  test_integration.py  test_llm.py  test_messages.py  test_models.py  test_prompt.py  test_session.py  test_tags.py  test_tasks.py  test_tools.py  test_websocket.py
server/tests/conversations/: test_store.py
server/tests/memory/: test_alembic_migrations.py  test_embedder.py  test_memory_config.py  test_rdbms_models.py
server/tests/tools/: test_index.py
server/tools/: base.py  filesystem.py  index.py  schema.py  screenshot.py  shell.py
(+66 files in other folders)
