[project]
name = "wesee-server"
version = "0.1.0"
description = "WeSee AI companion backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "volcengine-python-sdk[ark]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "respx>=0.21.0",
    "testcontainers[postgres]>=4.7.0",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "aiosqlite>=0.20.0",
    "respx>=0.21.0",
    "testcontainers[postgres]>=4.7.0",
    "psycopg2-binary>=2.9.9",
]
